Atualizar estilos de filtros - Modificar margens dos filtros para melhor alinhamento e apresentação, incluindo ajuste na margem do primeiro filtro para garantir uma aparência mais harmoniosa.

--- a/client/src/components/boards/BoardActions/Filters.module.scss
+++ b/client/src/components/boards/BoardActions/Filters.module.scss
@@ -48,9 +48,14 @@
     display: inline-block;
     font-size: 0;
     line-height: 0;
-    margin-right: 4px;
+    margin-left: -6px;
+    margin-right: 0;
     max-width: 190px;
     vertical-align: top;
+    
+    &:first-of-type {
+      margin-left: 8px;
+    }
   }
 
   .filterLabel {
