Atualizar estilos de inputs e ícones nos filtros - Modificar a cor e adicionar sombras de texto aos inputs e ícones para melhorar a legibilidade e a apresentação visual, garantindo uma interface mais moderna e atraente.

--- a/client/src/components/boards/BoardActions/Filters.module.scss
+++ b/client/src/components/boards/BoardActions/Filters.module.scss
@@ -111,7 +111,19 @@
     }
 
     input {
+      color: rgba(255, 255, 255, 0.5) !important;
       font-size: 13px;
+      text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+
+      &::placeholder {
+        color: rgba(255, 255, 255, 0.6);
+        text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+      }
+    }
+
+    i.icon {
+      color: rgba(255, 255, 255, 0.7) !important;
+      text-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
     }
   }
 
