--- a/client/src/components/cards/Card/ProjectContent.module.scss
+++ b/client/src/components/cards/Card/ProjectContent.module.scss
@@ -42,6 +42,21 @@
     float: right;
     line-height: 0;
     margin-top: 6px;
+
+    // Sobreposição dos avatares dos membros (como nos projetos)
+    .attachmentRight {
+      margin-left: -6px;
+    }
+
+    // O primeiro avatar não deve ter margem negativa
+    .attachmentRight:first-of-type {
+      margin-left: 0;
+    }
+
+    // Não mostrar o divisor do criador quando os avatares estão sobrepostos
+    .creatorDivider {
+      display: none;
+    }
   }
 
   .cover {
