--- a/client/src/components/finance/FinancePanel/ExpensesTab.module.scss
+++ b/client/src/components/finance/FinancePanel/ExpensesTab.module.scss
@@ -369,7 +369,7 @@
     inset 0 1px 1px rgba(255, 255, 255, 0.3);
   
   overflow: hidden;
-  height: calc(100vh - 140px);
+  height: fit-content;
   display: flex;
   flex-direction: column;
 }
@@ -820,10 +820,9 @@
     transparent 100%
   );
   flex: 0 0 auto;
-  overflow-y: auto;
+  overflow-y: visible;
   height: auto;
   min-height: auto;
-  max-height: calc(100vh - 200px);
 }
 
 .empty {
